--- a/nginx/sites/seo_frontend.conf
+++ b/nginx/sites/seo_frontend.conf
@@ -1,9 +1,9 @@
 server {
 
-    listen 10001;
+    listen 10002;
 
     server_name localhost;
-    root /var/www/backend/public;
+    root /var/www/seo_frontend/laravel/public;
     index index.php index.html index.htm;
 
     location / {
@@ -29,34 +29,5 @@ server {
     location /.well-known/acme-challenge/ {
         root /var/www/letsencrypt/;
         log_not_found off;
-    }
-
-    location /img_download/ {
-        alias /var/www/img_download/;
-        autoindex off;
-    }
-}
-
-server {
-
-    listen 10003;
-
-    server_name download1.com;
-
-    location /mb/ {
-        root /var/www/backend/public;
-    }
-
-    location /img_download/ {
-        alias /var/www/img_download/;
-        autoindex off;
-    }
-
-    location ~ ^/(.*)$ {
-        proxy_pass http://127.0.0.1:10001/soft2/$1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
